--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -9,7 +9,8 @@
         %div= "Lat: #{@place.latitude}, Lon: #{@place.longitude}, MSL: #{@place.msl}"
       .col-sm-2
         .pull-right
-          = link_to 'Edit', edit_place_path(@place), class: 'btn btn-default'
+          - if can? :update, @place
+            = link_to 'Edit', edit_place_path(@place), class: 'btn btn-default'
 
   %table.table.table-hover
     %thead
@@ -28,8 +29,8 @@
           %td.text-info= track.id
           %td.text-info= track.name
           %td.text-info= track.wingsuit.present? ? track.wingsuit.name : track.suit
-          %td.text-info= track.distance.result
-          %td.text-info= track.speed.result
-          %td.text-info= track.time.result
+          %td.text-info= track.distance.result if track.distance
+          %td.text-info= track.speed.result if track.speed
+          %td.text-info= track.time.result if track.time
           %td.text-muted= track.comment
           %td.text-info= track.created_at.strftime('%d.%m.%Y')
