--- a/app/views/static_pages/manage.html.haml
+++ b/app/views/static_pages/manage.html.haml
@@ -39,4 +39,6 @@
       %p
         = link_to 'Профили', user_profiles_path
       %p
+        = link_to 'Бейджи', badges_path
+      %p
         = link_to 'Пользователи', users_path
