Hotfix on validation forgot-password-form

--- a/app/views/users/passwords/edit.html.haml
+++ b/app/views/users/passwords/edit.html.haml
@@ -1,7 +1,7 @@
 .container
   %h2= t('devise.passwords.edit.change_your_password')
 
-  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f|
+  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'form-horizontal change-password' }) do |f|
     = devise_error_messages!
     = f.hidden_field :reset_password_token
 
