--- a/app/assets/stylesheets/tracks.css
+++ b/app/assets/stylesheets/tracks.css
@@ -1,3 +1,20 @@
+.videowrapper {
+    float: none;
+    clear: both;
+    width: 100%;
+    position: relative;
+    padding-bottom: 36.25%;
+    padding-top: 25px;
+    height: 0;
+}
+.videowrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .comment-cell {
   max-width: 250px;
 }
