--- a/app/views/tracks/replay.html.haml
+++ b/app/views/tracks/replay.html.haml
@@ -1,39 +1,6 @@
 .track-replay{data: track_video_settings}
 .container
-  .page-header
-    .row
-      .col-md-12
-        %h1
-          - if @track_video.track.pilot
-            %a{href: user_profile_path(@track_video.track.pilot)}
-              = image_tag @track_video.track.pilot.userpic.url(:thumb), :class => 'img-rounded img-50 loading-bg'
-              = @track_video.track.pilot.name
-          - else
-            = @track_video.track.name
-          =header @track_video.track
-          %small
-            %span= t('tracks.show.title_suit') + ':' 
-            - if @track_video.track.wingsuit
-              - manufacturer = @track_video.track.wingsuit.manufacturer
-              %span.text-warning{data: {toggle: 'tooltip'}, title: manufacturer.name}= manufacturer.code || ''
-              %span= ' ' + @track_video.track.wingsuit.name
-            - else
-              %span= @track_video.track.suit
-            %span= "@#{@track_video.track.location}"
-    .row
-      .col-md-12
-        %a.btn.btn-default{href: track_path(@track_video.track)}
-          %i.fa.fa-bar-chart-o
-          = 'Charts'
-        - if @track_video.track.ge_enabled
-          %a.btn.btn-default{href: google_earth_track_path(@track_video.track), target: '_blank'}
-            %i.fa.fa-compass
-            = 'Google earth'
-        %a.btn.btn-default{href: google_maps_track_path(@track_video.track), target: '_blank'}
-          %i.fa.fa-compass
-          = 'Google maps'
- 
-
+  = render partial: 'header', locals: {track: @track_video.track}
   .row
     .col-sm-12
       .videowrapper
@@ -41,7 +8,19 @@
   .row
     .col-md-11.col-md-offset-1.col-sm-12
       .row
-        .col-md-4.col-sm-4.col-xs-6
+        .col-md-3.col-sm-4.col-xs-6
+          .param-val
+            .avg-val.fa-3x#p_cur_elev= '---'
+            .min-max.text-right
+              .min-val
+                %span#p_elev_diff= '---'
+                %i.fa.fa-lg.fa-caret-down
+            .dst-unit.fa-2x= t 'units.m'
+          .param
+            %i.fa.fa-fw.fa-lg.fa-arrows-v
+            =t 'tracks.show.adc_h_s'
+
+        .col-md-3.col-sm-4.col-xs-6
           .param-val
             .avg-val.fa-3x#p_cur_v_speed= '---'
             .spd-unit.fa-2x=t 'units.kmh'
@@ -49,7 +28,7 @@
             %i.fa.fa-fw.fa-lg.fa-long-arrow-down
             =t 'tracks.show.dt_vspd'
 
-        .col-md-4.col-sm-4.col-xs-6
+        .col-md-3.col-sm-4.col-xs-6
           .param-val
             .avg-val.fa-3x#p_cur_h_speed= '---'
             .spd-unit.fa-2x=t 'units.kmh'
@@ -57,10 +36,9 @@
             %i.fa.fa-fw.fa-lg.fa-long-arrow-right
             =t 'tracks.show.dt_hspd'
 
-        .col-md-4.col-sm-4.col-xs-6
+        .col-md-3.col-sm-4.col-xs-6
           .param-val
             .avg-val.fa-3x#p_cur_gr= '-.--'
           .param
             %i.fa.fa-fw.fa-lg.fa-ellipsis-h
             =t 'tracks.show.dt_gr'
-
