--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -83,7 +83,7 @@
                   - else 
                     %span.text-info
                       = track.suit
-                %td.text-info= track.location
+                %td.text-info= track_place(track)
                 %td.text-right
                   %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.distance)}
                     = track.distance.result.to_i if track.distance
