--- a/app/views/tracks/_new_track.html.haml
+++ b/app/views/tracks/_new_track.html.haml
@@ -21,11 +21,14 @@
             %span.col-sm-3.control-label
               = t('static_pages.index.track_form.name')
             .col-sm-9
-              = text_field_tag 'name', 
-                               nil, 
-                               class: 'form-control', 
-                               placeholder: t('static_pages.index.track_form.name_plh'), 
-                               type: 'text'
+              - if current_user
+                %span.track-name-span= current_user.user_profile.name
+              - else
+                = text_field_tag 'name', 
+                                 nil, 
+                                 class: 'form-control', 
+                                 placeholder: t('static_pages.index.track_form.name_plh'), 
+                                 type: 'text'
 
           .form-group
             %span.col-sm-3.control-label
