--- a/app/views/tracks/replay.html.haml
+++ b/app/views/tracks/replay.html.haml
@@ -1,6 +1,6 @@
-.track-replay{data: track_video_settings}
+.track-replay{data: @track_data.to_data_attr}
 .container
-  = render partial: 'header', locals: {track: @track_video.track}
+  = render partial: 'header', locals: {track: @track_data.track}
   .row
     .col-sm-12
       .videowrapper
