--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -1,9 +1,10 @@
-- provide :title, title(@track)
+- track = @track_data.track
+- provide :title, title(track)
  
-.track-data{track_data_attr}
+.track-data{data: @track_data.to_data_attr}
   
 .container
-  = render partial: 'header', locals: {track: @track}
+  = render partial: 'header', locals: {track: track}
   .row
     .col-md-11.col-md-offset-1.col-sm-12
       .row
@@ -90,9 +91,9 @@
   #single-chart
     #all_data_chart
 
-  - if @track.comment.present?
+  - if track.comment.present?
     %blockquote
-      %small= @track.comment
+      %small= track.comment
 
 .modal.fade#edit-range{tabindex: '-1', role: 'dialog', aria: {labelledby: 'myModalLabel', hidden: 'true'}}
   .modal-dialog
