--- a/app/views/events/_result_modal.haml
+++ b/app/views/events/_result_modal.haml
@@ -28,7 +28,7 @@
               %span#rm-round-name
             .col-sm-6
               %a.text-danger#rm-delete{href: '#'}
-                = 'Удалить результат'
+                = 'Delete result'
 
           #rm-new-track
             .form-group.top-buffer
