--- a/app/views/events/_section_modal.html.haml
+++ b/app/views/events/_section_modal.html.haml
@@ -14,7 +14,7 @@
 
         .modal-body
           .form-group
-            %span.col-sm-3.control-label= 'Класс:'
+            %span.col-sm-3.control-label= 'Class:'
             .col-sm-9
               %input.form-control#section-name
 
