--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,11 +1,11 @@
 .container.top-buffer
 
-  -# - if user_signed_in?
-  - is_admin = current_user && current_user.has_role?(:admin)
-  - if is_admin
+  - if current_user
     %a.btn.btn-default.btn-info{:href => new_event_path}
       %i.fa.fa-plus
       = 'Competition'
+  - else
+    %span= 'Creating classic competitions available only for registered users.'
 
   %h2= 'Online competitions:'
   %table.table.table-hover
@@ -14,10 +14,9 @@
         %tr.clickableRow{data: {url: virtual_competition_path(comp.id)}}
           %td.text-info
             = competition_title(comp)
-  %h2= t 'static_pages.index.events.completed'
+  %h2= 'Classic competitions:'
   %table.table.table-hover
     %tbody
-      - events = is_admin ? Event.all : Event.published
-      - events.each do |e|
-        %tr.clickableRow{:data => {:url => event_path(:id => e.id)}}
+      - @events.each do |e|
+        %tr.clickableRow{data: {url: event_path(id: e.id)}}
           %td.text-info= e.name
