event organizers feature

--- a/app/views/events/_event_settings_modal.html.haml
+++ b/app/views/events/_event_settings_modal.html.haml
@@ -1,12 +1,12 @@
-.modal.fade#event-form-modal{:tabindex => '-1', :role => 'dialog', :aria => {:labelledby => 'myModalLabel', :hidden => 'true'}}
+.modal.fade#event-form-modal{tabindex: '-1', role: 'dialog', aria: {labelledby: 'myModalLabel', hidden: 'true'}}
   .modal-dialog
     .modal-content
-      %form.form-horizontal#event-form{:action => '#', :role => 'form'}
-        %input#event-id{:type => 'hidden'}
+      %form.form-horizontal#event-form{action: '#', role: 'form'}
+        %input#event-id{type: 'hidden'}
 
         .modal-header
-          %button.close{:type => 'button', :data => {:dismiss => 'modal'}}
-            %span{:aria => {:hidden => 'true'}}
+          %button.close{type: 'button', data: {dismiss: 'modal'}}
+            %span{aria: {hidden: 'true'}}
               &times;
             %span.sr-only
               Close
@@ -14,12 +14,12 @@
 
         .modal-body
           .form-group
-            %span.col-sm-5.control-label= 'Name:'
-            .col-sm-7
+            %span.col-sm-4.control-label= 'Name:'
+            .col-sm-8
               %input.form-control#event-name
 
           .form-group.row
-            %span.col-sm-5.control-label= 'Competition window:'
+            %span.col-sm-4.control-label= 'Competition window:'
             .col-sm-3
               %input.form-control#range-from
             %span.col-sm-1.text-center= ' - '
@@ -27,8 +27,8 @@
               %input.form-control#range-to
 
           .form-group
-            %span.col-sm-5.control-label= 'Status:'
-            .col-sm-7
+            %span.col-sm-4.control-label= 'Status:'
+            .col-sm-8
               .btn-group{data: {toggle: "buttons"}}
                 %label#draft-label.btn.btn-default
                   %input{type: "radio", name: "event-status", value: "draft", autocomplete: "off"}
@@ -40,7 +40,13 @@
                   %input{type: "radio", name: "event-status", value: "finished", autocomplete: "off"}
                     = 'Finished'
 
+          .form-group
+            %span.col-sm-4.control-label= 'Organizers:'
+            .col-sm-8
+              .organizers-container
+              %select.form-control.organizer-profile
+
         .modal-footer
-          %input.btn.btn-primary#submit-event-form{:data => {:dismiss => 'modal'}, :value => "#{t 'general.save'}"}
-          %button.btn.btn-default{:type => 'button', :data => {:dismiss => 'modal'}}= t 'general.cancel'
+          %input.btn.btn-primary#submit-event-form{data: {dismiss: 'modal'}, value: "#{t 'general.save'}"}
+          %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}= t 'general.cancel'
 
