fix translations, add units row

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -16,7 +16,7 @@
       %h1
         %span#title-competition-name= @event.name
 
-      %h3#title-competition-range= "Competition window: #{@event.range_from} - #{@event.range_to} #{t('units.m')}"
+      %h3#title-competition-range= "#{t('.comp_window')} #{@event.range_from} - #{@event.range_to} #{t('units.m')}"
     .col-md-3
       .pull-right#edit-event-commands
 
