--- a/app/views/events/_competitor_modal.html.haml
+++ b/app/views/events/_competitor_modal.html.haml
@@ -1,11 +1,11 @@
-.modal.fade#competitor-form-modal{:tabindex => '-1', :role => 'dialog', :aria => {:labelledby => 'myModalLabel', :hidden => 'true'}}
+.modal.fade#competitor-form-modal{tabindex: '-1', role: 'dialog', aria: {labelledby: 'myModalLabel', hidden: 'true'}}
   .modal-dialog
     .modal-content
-      %form.form-horizontal#competitor-form{:role => 'form'}
-        %input#competitor-id{:type => 'hidden'}
+      %form.form-horizontal#competitor-form{role: 'form'}
+        %input#competitor-id{type: 'hidden'}
         .modal-header
-          %button.close{:type => 'button', :data => {:dismiss => 'modal'}}
-            %span{:aria => {:hidden => 'true'}}
+          %button.close{type: 'button', data: {dismiss: 'modal'}}
+            %span{aria: {hidden: 'true'}}
               &times;
             %span.sr-only
               Close
@@ -13,22 +13,22 @@
 
         .modal-body
           .form-group.row
-            %span.col-sm-3.control-label= 'Profile:'
+            %span.col-sm-3.control-label= t('events.show.profile')
             .col-sm-9
               %select.form-control.competitor-profile
               %input.form-control.new-profile-name
             .col-sm-9.col-sm-offset-3
               %span
-                %span.toggle-profile-caption= "Pilot you are looking for doesn't exist?"
-                %a.toggle-profile{href: '#'}= 'Create new profile'
+                %span.toggle-profile-caption= t('events.show.profile_caption')
+                %a.toggle-profile{href: '#'}= t('events.show.toggle_profile')
           .form-group
-            %span.col-sm-3.control-label= 'Suit:'
+            %span.col-sm-3.control-label= t('events.show.suit')
             .col-sm-9
               %select.form-control#competitor-wingsuit
           .form-group
-            %span.col-sm-3.control-label= 'Class:'
+            %span.col-sm-3.control-label= t('events.show.section') + ':'
             .col-sm-9
               %select.form-control#competitor-section
         .modal-footer
-          %input.btn.btn-primary#submit-competitor-form{type: 'submit', :value => "#{t 'general.save'}"}
-          %button.btn.btn-default{:type => 'button', :data => {:dismiss => 'modal'}}= t 'general.cancel'
+          %input.btn.btn-primary#submit-competitor-form{type: 'submit', value: "#{t 'general.save'}"}
+          %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}= t 'general.cancel'
