--- a/app/views/events/_event_settings_modal.html.haml
+++ b/app/views/events/_event_settings_modal.html.haml
@@ -14,12 +14,12 @@
 
         .modal-body
           .form-group
-            %span.col-sm-4.control-label= 'Name:'
+            %span.col-sm-4.control-label= t('activerecord.attributes.event.name') + ':'
             .col-sm-8
               %input.form-control#event-name
 
           .form-group.row
-            %span.col-sm-4.control-label= 'Competition window:'
+            %span.col-sm-4.control-label= t('events.show.comp_window')
             .col-sm-3
               %input.form-control#range-from
             %span.col-sm-1.text-center= ' - '
@@ -27,21 +27,21 @@
               %input.form-control#range-to
 
           .form-group
-            %span.col-sm-4.control-label= 'Status:'
+            %span.col-sm-4.control-label= t('activerecord.attributes.event.status') + ':'
             .col-sm-8
               .btn-group{data: {toggle: "buttons"}}
                 %label#draft-label.btn.btn-default
                   %input{type: "radio", name: "event-status", value: "draft", autocomplete: "off"}
-                    = 'Draft'
+                    = t('event_status.draft')
                 %label#published-label.btn.btn-default
                   %input{type: "radio", name: "event-status", value: "published", autocomplete: "off"}
-                    = 'Published'
+                    = t('event_status.published')
                 %label#finished-label.btn.btn-default
                   %input{type: "radio", name: "event-status", value: "finished", autocomplete: "off"}
-                    = 'Finished'
+                    = t('event_status.finished')
 
           .form-group
-            %span.col-sm-4.control-label= 'Organizers:'
+            %span.col-sm-4.control-label= t('events.show.organizers') + ':'
             .col-sm-8
               .organizers-container
               %select.form-control.organizer-profile
